<resources>
    <string name="app_name">CloudCard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="selectTaskFromDrawer">Welcome to CloudCard.</string>
    <string name="correctCode">Correct code</string>
    <string name="incorrectCode">Incorrect code</string>
    <string name="cloudcard">CloudCard</string>
    <string name="swipeToStart">Swipe left to start! \n\n Swipe up to flip, Right to go back, Left to go forward</string>
    <string name="find_new_deck">Find new deck</string>
    <string name="your_decks">Your decks</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="deckChooserTitle">Available Decks</string>
    <string name="enterAccessCode">Enter Access Code</string>
    <string name="yourDecks">Your Decks</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="mvhs_name">Mountain View High School</string>
    <string name="card_back">Back</string>
    <string name="card_front">Front</string>
    <string name="flip_card">Flip</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="web_client_id">1014736936580-0u9ccskahndl7d4pm52c0eaf5jnvcuj6.apps.googleusercontent.com</string>

</resources>
