<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deckfinder"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/find_new_deck" />
        <item
            android:id="@+id/nav_yourdecks"
            android:icon="@drawable/ic_menu_yourdecks"
            android:title="@string/your_decks" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/notifications" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
